fixed padding issue now content is not shifting when window is resizing

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -14,8 +14,8 @@ body{
 }
 
 .container-main{
-	padding-top: 7.5%;
-	margin: 0 auto;
+	padding-top: 100px;
+	/*margin: 7.5% auto;*/
 	/*width: 50%;*/
 }
 .card{
